alignment fixed css column layout scroll

--- a/css/main.css
+++ b/css/main.css
@@ -1,55 +1,43 @@
 html {
-    overflow: hidden;
-    -ms-touch-action: pan-y;
-    touch-action: pan-y;
+    
 }
-
-body {
-    user-select: none;
+body {   
     top: 0;
     right: 0;
     bottom: 0;
-    left: 0;
-    overflow: hidden;
+    left: 0;    
     margin: 0;
     padding: 0;
     color: #000;
     word-wrap: break-word;
     font-size: 14px;
     line-height: 20px;
-
 }
-
-
-header, footer {
+header,
+footer {
     width: 100%;
     padding: 15px;
     color: white;
-
 }
 .header {
     position: relative;
     background-color: #0f1b94;
     font: bold 22px Arial;
 }
-
 .footer {
     position: absolute;
     bottom: 0;
     background-color: black;
 }
-
 section {
     margin-top: 5%;
 }
-form
-{
+form {
     width: 80%;
     margin: 0% 10%;
     text-align: center;
 }
 input[type="text"] {
-
     padding-top: 2px;
     padding-left: 0;
     height: 34px;
@@ -59,16 +47,13 @@ input[type="text"] {
     line-height: 16px;
     border-radius: 5px;
 }
-
 label {
-
     padding: 7px 10px 7px 0px;
     max-width: 200px;
     width: 35%;
     color: #444;
     font-size: 18px;
 }
-
 button {
     border: 1px solid transparent;
     background-color: #1524b9;
@@ -86,22 +71,23 @@ button {
     line-height: 42px;
     cursor: pointer;
 }
-
 .contentArea {
     position: relative;
-    column-count: 2;
-    -webkit-column-count: 2;
+    direction: ltr;
+    /*column direction ltr or rtl - modify to suit*/
     -moz-column-count: 2;
-    width: 80% !important;
-    margin: 2% 10%;
-    max-height: 600px;
-    overflow-y: auto;
-    column-width: 100px;
-    column-fill: balance;
-
-
-
+    -webkit-column-count: 2;
+    column-count: 2 overflow-y: hidden;
+    overflow-x: hidden;
+    width: 100%;
+    padding: 10px;
+    text-align: center;
+    column-rule: 1px solid gray
 }
-.contentArea div{
-    border: 1px solid gray;
+.scroll {
+    overflow-y: auto;
+    overflow-x: hidden;
+    width: 80%;
+    height: 400px;
+    margin: 0 10%;
 }
